[svn r1088] (BNK)Von findbugs gefundene Bugs durch schwieriger zu findende ersetzt.